# kmlorm

./: .flake8  .gitignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pyrightconfig.json
docs/: GOOGLE_KML_EXTENSIONS.md  KML_ORM_SPECIFICATION.md  KML_SPECIFICATION.md
docs/docs/source/api/: kmlorm.core.exceptions.rst  kmlorm.core.managers.rst  kmlorm.core.querysets.rst  kmlorm.core.rst  kmlorm.exports.rst  kmlorm.models.base.rst  kmlorm.models.folder.rst  kmlorm.models.multigeometry.rst  kmlorm.models.path.rst  kmlorm.models.placemark.rst  kmlorm.models.point.rst  kmlorm.models.polygon.rst  kmlorm.models.rst  kmlorm.parsers.kml_file.rst  kmlorm.parsers.rst  kmlorm.parsers.xml_parser.rst  kmlorm.rst  kmlorm.spatial.rst  kmlorm.tests.rst  kmlorm.tests.test_basic.rst  kmlorm.tests.test_kml_file.rst  kmlorm.utils.rst  modules.rst
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  query_behavior.rst  quickstart.rst  tutorial.rst
docs/source/api/: coordinates.rst  exceptions.rst  index.rst  kmlfile.rst  models.rst  querysets.rst  spatial.rst
kmlorm/: __init__.py
kmlorm/core/: __init__.py  exceptions.py  managers.py  querysets.py
kmlorm/models/: __init__.py  base.py  folder.py  multigeometry.py  path.py  placemark.py  point.py  polygon.py
kmlorm/parsers/: kml_file.py  xml_parser.py
kmlorm/spatial/: __init__.py  calculations.py  constants.py  exceptions.py  strategies.py
kmlorm/tests/: conftest.py  test_api_docs_examples.py  test_api_examples.py  test_api_functionality.py  test_api_transition_compatibility.py  test_base.py  test_basic.py  test_coordinate_docs.py  test_core_docs.py  test_examples_documentation.py  test_exceptions_docs.py  test_folder.py  test_geometry_recursive_collection.py  test_index_docs.py  test_kml_file.py  test_kmlfile_docs.py  test_manager_children_method.py  test_managers_docs.py  test_managers_extra.py  test_models_docs.py  test_multigeometry.py  test_path.py  test_placemark.py  test_point_extra.py  test_polygon.py  test_queryset.py  test_querysets_docs.py  test_querysets_extra.py  test_quickstart_examples.py  test_recursive_all_behavior.py  test_spatial_calculations.py  test_spatial_distances_to_many.py  test_spatial_docs.py  test_spatial_edge_cases.py  test_spatial_interpolation.py  test_spatial_strategies.py  test_tutorial_examples.py  test_tutorial_field_lookups_exact.py  test_url_integration.py  test_xml_parser.py
kmlorm/tests/fixtures/: comprehensive.kml  google_earth_kml.kml  multigeometry_test.kml  sample.kml  tutorial_stores.kml
llm_prompts/: doc_testing_update_instructions.md
scripts/: unittest_to_pytest.py  validate_pytest_conversion.py
